# bevy_brgi

./: Cargo.toml  README.md  TODO.md  gen_shader_handles.py  random_uuid.py  render_graph.dot
assets/shaders/: matching_probes.wgsl  pers_render.wgsl  pers_spawn_intersect_probes.wgsl  prefix_sum_reduce.wgsl  probe_distance.wgsl  utils.wgsl
examples/: cornell_box.rs
scripts/: gen_shader_macros.py
shaders/: accumulate_probe_color.wgsl  check_intersect.wgsl  intersection_to_color.wgsl  pers_render.wgsl  pers_render_probes.wgsl  prefix_sum.wgsl  spawn_intersect_probes.wgsl  utils.wgsl
src/: common_cache.rs  lib.rs  main.rs  node.rs  probe.rs  screen_cache.rs  world_cache.rs
src/deferred/: deferred_lighting.wgsl  mod.rs
src/node/: .count_probes.rs.rustfmt  accumulate_probe_color.rs  check_intersect.rs  count_probes.rs  matching_probe.rs  pers_render.rs  pers_render_probes.rs  pers_spawn_intersect_probes.rs  prefix_sum.rs  probe_distance.rs  spawn_intersect_probes.rs  utils.rs
src/shaders/: accumulate_probe_color.wgsl  check_intersect.wgsl  count_probes.wgsl  matching_probe.wgsl  pers_render_probes.wgsl  pers_spawn_intersect_probes.wgsl  prefix_sum_distribute.wgsl  prefix_sum_reduce.wgsl  probe_distance.wgsl  spawn_intersect_probes.wgsl  utils.wgsl
