[package]
name = "bevy_brgi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13"
bytemuck = "1.15"

[dev-dependencies]
bevy_flycam = "0.13"
bevy_editor_pls = "0.8"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
debug-assertions = true

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
debug-assertions = true

[profile.test]
opt-level = 3

[[example]]
name = "cornell_box"
path = "examples/cornell_box.rs"

